deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartrenew
  namespace: smartrenew
  labels:
    app: smartrenew
spec:
  selector:
    app: smartrenew
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
